[gd_scene load_steps=13 format=3 uid="uid://bec5ymsjqbw3l"]

[ext_resource type="Script" uid="uid://be26l1vy7asuq" path="res://Scripts/day_night_cycle.gd" id="1_e4bus"]

[sub_resource type="Environment" id="Environment_qf6xv"]
background_mode = 1
background_color = Color(0.0470588, 0.054902, 0.227451, 1)
ambient_light_color = Color(0.0470588, 0.054902, 0.227451, 1)
tonemap_exposure = 1.7

[sub_resource type="Animation" id="Animation_kvphj"]
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:environment:background_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0470588, 0.054902, 0.227451, 1), Color(0.4, 0.858824, 0.964706, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:environment:ambient_light_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0470588, 0.054902, 0.227451, 1), Color(0.4, 0.858824, 0.964706, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:environment:tonemap_exposure")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.7, 1.0]
}

[sub_resource type="Animation" id="Animation_dohrl"]
resource_name = "ToDay"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:environment:background_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0470588, 0.054902, 0.227451, 1), Color(0.4, 0.858824, 0.964706, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:environment:ambient_light_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.0470588, 0.054902, 0.227451, 1), Color(0.4, 0.858824, 0.964706, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:environment:tonemap_exposure")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.7, 1.0]
}

[sub_resource type="Animation" id="Animation_jx7lj"]
resource_name = "ToNight"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:environment:background_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.4, 0.858824, 0.964706, 1), Color(0.0470588, 0.054902, 0.227451, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:environment:ambient_light_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.4, 0.858824, 0.964706, 1), Color(0.0470588, 0.054902, 0.227451, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:environment:tonemap_exposure")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 6.01),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 1.7]
}

[sub_resource type="Animation" id="Animation_f6fy2"]
resource_name = "skyColor"
length = 12.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:environment:background_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6.01),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.4, 0.858824, 0.964706, 1), Color(0.0470588, 0.054902, 0.227451, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:environment:ambient_light_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.4, 0.858824, 0.964706, 1), Color(0.0470588, 0.054902, 0.227451, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ie0g"]
_data = {
&"RESET": SubResource("Animation_kvphj"),
&"ToDay": SubResource("Animation_dohrl"),
&"ToNight": SubResource("Animation_jx7lj"),
&"skyColor": SubResource("Animation_f6fy2")
}

[sub_resource type="Animation" id="Animation_47enk"]
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(4.71239, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_ac4p3"]
resource_name = "ToDay"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(4.71239, 0, 0), Vector3(-1.5708, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_5ie0g"]
resource_name = "ToNight"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(4.71239, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_tjuek"]
resource_name = "sunRotate"
length = 12.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 12),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-1.5708, 0, 0), Vector3(4.71239, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:light_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.99, 9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jx7lj"]
_data = {
&"RESET": SubResource("Animation_47enk"),
&"ToDay": SubResource("Animation_ac4p3"),
&"ToNight": SubResource("Animation_5ie0g"),
&"sunRotate": SubResource("Animation_tjuek")
}

[node name="DayNightCycle" type="Node3D"]
script = ExtResource("1_e4bus")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_qf6xv")

[node name="sky_animation_player" type="AnimationPlayer" parent="WorldEnvironment"]
libraries = {
&"": SubResource("AnimationLibrary_5ie0g")
}

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -3.61999e-06, 1, 0, -1, -3.61999e-06, 0, 4.50264, 0)

[node name="light_animation_player" type="AnimationPlayer" parent="DirectionalLight3D"]
libraries = {
&"": SubResource("AnimationLibrary_jx7lj")
}
autoplay = "sunRotate"

[node name="night_timer" type="Timer" parent="."]
wait_time = 306.0
one_shot = true
